--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         <div class="row mt-4">
             <div class="col-12">
                 <div class="alert alert-info text-center">
-                    <small>تم التطوير بواسطة برنامج الحسن للهواتف المحمولة | الرقم السري للعمليات الحساسة: 521988</small>
+                    <small>تم تطوير هذ البرنامج بواسطة مهندس محمد حماد</small>
                 </div>
             </div>
         </div>
