--- a/index.html
+++ b/index.html
@@ -455,7 +455,6 @@
                         <div class="mb-3">
                             <label for="loginPassword" class="form-label">كلمة المرور</label>
                             <input type="password" class="form-control" id="loginPassword" required>
-                            <div class="form-text">كلمة مرور معتز: 666666 | كلمة مرور مصطفي: 521988</div>
                         </div>
                         
                         <div class="d-grid gap-2">
@@ -465,7 +464,7 @@
                     </form>
                     
                     <div class="login-footer">
-                        <p class="text-muted">© 2024 برنامج الحسن - جميع الحقوق محفوظة</p>
+                        <p class="text-muted">برمجة مهندس محمد حماد</p>
                     </div>
                 </div>
             </div>
